--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Javascript fetch GET requests lab</title>
   </head>
   <body>
+    <h1>To ∞ and Beyond!</h1>
+    <div id=starInputs>
+    </div>
+    <div id=starStuff>
+    </div>
     <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
